Bug bash - High priority bug fixes (#187)
* Fix heading links for API references

* Add tooltips for truncated global TOC items

* Fix content spacing for titles and rulers

* Fix links for sub-page TOC items

* Improve styling for API reference page

--- a/theme/src/components/App/App.module.scss
+++ b/theme/src/components/App/App.module.scss
@@ -1,5 +1,7 @@
 @use 'sass:math';
 
+@import './apiReference.scss';
+
 .content {
   // Render Markdown badges as inline elements.
   p > a > img {
@@ -35,6 +37,15 @@
     }
   }
 
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    // Reduce default top margins because they're really big in flex layouts.
+    @apply mt-4;
+  }
+
   h2 {
     /*
       The designs requires a 35px margin between the heading and the top of
@@ -58,6 +69,16 @@
   :global {
     .highlight {
       @apply relative p-4;
+    }
+
+    // Styles for header links. This makes it so that hovering over the header
+    // or link will render the link visible.
+    * > .headerlink {
+      @apply ml-4 text-napari-dark-gray;
+
+      &:hover {
+        @apply text-napari-deep-blue;
+      }
     }
 
     // Fixes styles for code copy button.
@@ -117,6 +138,11 @@
         top: unset;
         left: unset;
       }
+    }
+
+    // Reduce margins horizontal dividers.
+    hr.docutils {
+      @apply my-4;
     }
   }
 }
